# kemul

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.cache/clangd/index/: main.cpp.0F6F52760D6E7560.idx
src/: ANSIParser.cpp  ANSIParser.hpp  Application.cpp  Application.hpp  Buffer.cpp  Buffer.hpp  Cell.hpp  Color.hpp  Config.hpp  EventHandler.cpp  EventHandler.hpp  GlyphCache.cpp  GlyphCache.hpp  Window.cpp  Window.hpp  main.cpp
tests/: terminal_test.cpp  test.cpp
